--- a/src/app/dashboard/account/deposit/deposit.component.html
+++ b/src/app/dashboard/account/deposit/deposit.component.html
@@ -11,7 +11,7 @@
               <div class="w-5/6 md:w-3/4 lg:w-2/3 xl:w-[500px] 2xl:w-[550px] mt-8 mx-auto px-16 py-8 rounded-lg">
                   <!-- <h2 class="text-center text-2xl font-bold tracking-wide text-gray-800">Iniciar sesión</h2> -->
                   <form class="my-8 text-sm" [formGroup]="depositForm" (ngSubmit)="this.onSubmit()">
-                    <div class="flex flex-col my-4" *ngIf="!this.cookie.get('currentAccount')">
+                    <div class="flex flex-col my-4" *ngIf="!this.userData.get('currentAccount')">
                       <label for="account" class="text-gray-700">Cuenta:</label>
                       <select type="text" name="account" id="account" formControlName="account" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" required>
                         <option *ngFor="let option of UserAccountsList; index as i" value="{{i}}">Caja de {{option.accountType.name.toLowerCase()}}</option>
