Week4-Day2 Synchronization

--- a/src/app/components/desktop/transfer/transfer.component.html
+++ b/src/app/components/desktop/transfer/transfer.component.html
@@ -1,1 +1,37 @@
-<p>transfer works!</p>
+<div class="container" style="margin-top: 10px;">
+  <div>
+    <mat-card style="margin: 10px auto; width: 60%; background-color: rgba(65, 66, 62, 0.6);">
+      <h1 style="color:antiquewhite "> New Transfer </h1>
+
+      <mat-grid-list cols="3" rowHeight="70px">
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-label class="datalabel"> Origin Account Id: </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="2" [rowspan]="1">
+          <mat-label class="datafield"> Mi cuenta - esto es un select con todas mis cuentas </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-label class="datalabel"> Destination Account Id: </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="2" [rowspan]="1">
+          <mat-label class="datafield"> Cuenta destino - un select con todas las cuentas de un cliente buscado x nombre, documento o mail </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-label class="datalabel"> Amount: $ </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="2" [rowspan]="1">
+          <mat-label class="datafield"> Cantidad a transferir - chequear si hay $$ suficiente en la cuenta </mat-label>
+        </mat-grid-tile>
+
+
+
+      </mat-grid-list>
+    </mat-card>
+  </div>
+</div>
