--- a/src/app/components/desktop/deposit/deposit.component.html
+++ b/src/app/components/desktop/deposit/deposit.component.html
@@ -1,1 +1,27 @@
-<p>deposit works!</p>
+<div class="container" style="margin-top: 10px;">
+  <div>
+    <mat-card style="margin: 10px auto; width: 60%; background-color: rgba(65, 66, 62, 0.6);">
+      <h1 style="color:antiquewhite "> New Deposit </h1>
+
+      <mat-grid-list cols="3" rowHeight="70px">
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-label class="datalabel">Account Id: </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="2" [rowspan]="1">
+          <mat-label class="datafield"> Mi cuenta - esto deberia ser un select con todas las cuentas </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-label class="datalabel">Amount: $  </mat-label>
+        </mat-grid-tile>
+
+        <mat-grid-tile [colspan]="2" [rowspan]="1">
+          <mat-label class="datafield"> esto es un input </mat-label>
+        </mat-grid-tile>
+
+      </mat-grid-list>
+    </mat-card>
+  </div>
+</div>
