formulario reactivo singup y singin

--- a/src/app/customer/new-customer/new-customer/customer.component.html
+++ b/src/app/customer/new-customer/new-customer/customer.component.html
@@ -1,15 +1,12 @@
 <hr>
 <h3>Informacion de usuario:</h3>
-<p>Id de usuario: {{customer.accountUser.customer.id}}
-<p>Documento: {{ customer.accountUser.customer.document}}</p>
-<p>Id Tipo de documento: {{ customer.accountUser.customer.documentType.id}}</p>
-<p>Estado del documento: {{ customer.accountUser.customer.documentType.state}}</p>
-<p>Nombre: {{ customer.accountUser.customer.fullName}}</p>
-<p>Email: {{ customer.accountUser.customer.email}}</p>
-<p>Telefono: {{ customer.accountUser.customer.phone}}</p>
+<p>Id de usuario: {{usuario.accountUser.customer.id}}
+<p>Documento: {{ usuario.accountUser.customer.document}}</p>
+<p>Id Tipo de documento: {{ usuario.accountUser.customer.documentType.id}}</p>
+<p>Estado del documento: {{ usuario.accountUser.customer.documentType.state}}</p>
+<p>Nombre: {{ usuario.accountUser.customer.fullName}}</p>
+<p>Email: {{ usuario.accountUser.customer.email}}</p>
+<p>Telefono: {{ usuario.accountUser.customer.phone}}</p>
 <hr>
-<h3>Informacion de cuenta:</h3>
-<p>AccountType: {{ customer.accountUser.accountType.name}}</p>
-<p>Id de tipo de cuenta: {{ customer.accountUser.accountType.id}}</p>
-<p>Balance: {{ customer.accountUser.accountType.balance}}</p>
+
 
