Changes in environment

--- a/src/app/login/sign-in/sign-in.component.html
+++ b/src/app/login/sign-in/sign-in.component.html
@@ -38,7 +38,7 @@
               </div>
           </form>
           <div class="my-4 flex items-center justify-end space-x-4">
-            <button (click)="googleLogin()" class="bg-white hover:bg-slate-200 rounded-lg px-8 py-2 hover:shadow-xl uppercase"><img class="float-left" src="https://img.icons8.com/color/16/000000/google-logo.png">&nbsp; Iniciar sesión con Google</button>
+            <button (click)="googleLogin()" class="bg-white hover:bg-slate-200 rounded-lg px-8 py-2 hover:shadow-xl uppercase"><img class="float-left" alt="" src="https://img.icons8.com/color/16/000000/google-logo.png">&nbsp; Iniciar sesión con Google</button>
           </div>
       </div>
       <div class="flex items-center justify-center">
