sign-in changes

--- a/src/app/login/sign-in/sign-in.component.html
+++ b/src/app/login/sign-in/sign-in.component.html
@@ -33,11 +33,12 @@
                   <label for="remember" class="text-gray-700">Recuerdame</label>
               </div>
 
-              <div class="my-4 flex items-center justify-end space-x-4">
+              <div class="my-4 flex items-center justify-center space-x-4">
                   <button type="submit" class="bg-blue-600 hover:bg-blue-700 rounded-lg px-8 py-2 text-gray-100 hover:shadow-xl transition duration-150 uppercase">Iniciar sesión</button>
               </div>
           </form>
-          <div class="my-4 flex items-center justify-end space-x-4">
+          <hr/>
+          <div class="my-4 flex items-center justify-center space-x-4">
             <button (click)="googleLogin()" class="bg-white hover:bg-slate-200 rounded-lg px-8 py-2 hover:shadow-xl uppercase"><img class="float-left" alt="" src="https://img.icons8.com/color/16/000000/google-logo.png">&nbsp; Iniciar sesión con Google</button>
           </div>
       </div>
