--- a/src/app/modules/login/singup/singup.component.html
+++ b/src/app/modules/login/singup/singup.component.html
@@ -8,13 +8,13 @@
       <mat-form-field>
         <input matInput type="password" placeholder="Password" name="password" required formControlName="password">
       </mat-form-field>
-      <!-- <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill">
         <mat-label name="documentTypeName" required>Document Type</mat-label>
         <mat-select>
           <mat-option value="one">CI</mat-option>
           <mat-option value="two">Pasaporte</mat-option>
         </mat-select>
-      </mat-form-field> -->
+      </mat-form-field>
       <mat-form-field>
         <input matInput placeholder="Document Type" name="documentTypeName" required formControlName="documentTypeName">
       </mat-form-field>
