add en firebase googel

--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -16,6 +16,7 @@
 		<div class="col-12" style="top: 20px;">
 			<button type="submit" class="btn btn-primary" (click)="signIn()" style="width: 250px;" >Ingresar</button>
 		</div>
+		<button class="btn btn-info" (click)="google()">iniciar sesion con Google</button>
 	</div>
 </form>
 
