--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,83 @@
-<h1>Home</h1>
+<div class="container">
+    <nav>
+            <ul class="mcd-menu">
+                <li>
+                    <a href="">
+                        <i class="fa fa-home"></i>
+                        <strong>Home</strong>
+                        
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="active">
+                        <i class="fa fa-edit"></i>
+                        <strong>Deposit</strong>
+                        
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fa fa-gift"></i>
+                        <strong>transfer</strong>
+                        
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fa fa-globe"></i>
+                        <strong>News</strong>
+                       
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fa fa-comments-o"></i>
+                        <strong>Blog</strong>
+                       
+                    </a>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-globe"></i>Mission</a></li>
+                        <li>
+                            <a href="#"><i class="fa fa-group"></i>Our Team</a>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-female"></i>Leyla Sparks</a></li>
+                                <li>
+                                    <a href="#"><i class="fa fa-male"></i>Gleb Ismailov</a>
+                                    <ul>
+                                        <li><a href="#"><i class="fa fa-leaf"></i>About</a></li>
+                                        <li><a href="#"><i class="fa fa-tasks"></i>Skills</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#"><i class="fa fa-female"></i>Viktoria Gibbers</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#"><i class="fa fa-trophy"></i>Rewards</a></li>
+                        <li><a href="#"><i class="fa fa-certificate"></i>Certificates</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fa fa-picture-o"></i>
+                        <strong>Portfolio</strong>
+                        
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fa fa-envelope-o"></i>
+                        <strong>Contacts</strong>
+                        
+                    </a>
+                </li>
+                <li class="float">
+                    <a class="search">
+                        <input type="text" value="search ...">
+                        <button><i class="fa fa-search"></i></button>
+                    </a>
+                    <a href="" class="search-mobile">
+                        <i class="fa fa-search"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
