Firebase Login & State Management
+ implemented Firebase SignIn (with some errors)
+ State Management working for navbar
+ State Management not working for Guards

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" *ngIf="(authService.getUserStatus()) === false; else privateNavbar">
+<mat-toolbar color="primary" *ngIf=" !loggedUser  ; else privateNavbar">   <!-- authService.getUserStatus() -->
   <span routerLink="/" >Virtual Banking APP</span>
   <span class="spacer"></span>
 
