--- a/src/app/login/sign-in/sign-in.component.html
+++ b/src/app/login/sign-in/sign-in.component.html
@@ -10,9 +10,15 @@
         <h5 class="text-blueGray-700 text-xl font-bold">
           Sign In
         </h5>
-        <a href="http://localhost:4200/login/sign-up" class="bg-pink-500 text-white active:bg-pink-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150" type="button">
-          Sign Up
-        </a>
+
+        <div class="flex flex-row justify-end">
+          <button (click)="onClick()" class="bg-white text-blue-500 active:bg-blue-600 font-bold text-xs uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150" >
+           Sign In with <span class="text-blue-500">G</span> <span class="text-red-500">o</span> <span class="text-yellow-500">o</span> <span class="text-blue-500">g</span> <span class="text-green-500">l</span> <span class="text-red-500">e</span>
+          </button>
+          <a href="http://localhost:4200/login/sign-up" class="bg-pink-500 text-white active:bg-pink-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150" type="button">
+            Sign Up
+          </a>
+        </div>
       </div>
     </div>
     <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
@@ -27,6 +33,8 @@
                 Email address
               </label>
               <input formControlName="username" type="email" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" placeholder="sofka@example.com">
+              <p class="text-center bg-red-400 text-white rounded-b-sm" [hidden]="!formUser.controls.username.errors?.['required'] || this.formUser.controls.username.pristine">Email is Required</p>
+              <p class="text-center bg-red-400 text-white rounded-b-sm" *ngIf="isEmailUsed">This Email is in use</p>
             </div>
           </div>
           <div class="w-full lg:w-6/12 px-4">
@@ -35,6 +43,8 @@
                 Password
               </label>
               <input formControlName="password" type="password" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" placeholder="·············">
+              <p class="text-center bg-red-400 text-white rounded-b-sm" [hidden]="!formUser.controls.password.errors?.['required'] || formUser.controls.password.pristine">Password is Required</p>
+              <p class="text-center bg-red-400 text-white rounded-b-sm" [hidden]="!formUser.controls.password.errors?.['minlength'] || formUser.controls.password.pristine">Password need minimum 8 characters</p>
             </div>
           </div>
 
