--- a/src/app/account/account-dashboard/account-dashboard.component.html
+++ b/src/app/account/account-dashboard/account-dashboard.component.html
@@ -1,4 +1,8 @@
-<div class="w-full px-4 mx-auto mt-3 flex flex-col">
-  <app-account-info class="w-full"></app-account-info>
-  <app-account-btns class="w-full"></app-account-btns>
+<div class="w-full flex flex-col">
+  <app-account-show-info></app-account-show-info>
+
+  <div class="w-full px-4 mt-3 flex flex-row">
+    <app-account-info class="w-2/3 mx-3"></app-account-info>
+    <app-account-btns class="w-1/3"></app-account-btns>
+  </div>
 </div>
