--- a/src/app/account/account-info/account-info.component.html
+++ b/src/app/account/account-info/account-info.component.html
@@ -9,7 +9,7 @@
                 <th>Balance</th>
               </tr>
               <tr class="text-lg" *ngFor="let account of accounts">
-                <td><button>{{account.id}}</button></td>
+                <td><button (click)="newAccount(account.id)">{{account.id}}</button></td>
                 <td>{{account.accountType.name}}</td>
                 <td>$ {{account.balance}}</td>
               </tr>
