--- a/src/app/modules/login/singup/singup.component.scss
+++ b/src/app/modules/login/singup/singup.component.scss
@@ -8,3 +8,10 @@ mat-card {
 mat-form-field {
   display: block;
 }
+
+.content {
+  margin-top: 5%;
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-bottom: 5%;
+}
