--- a/src/app/modules/login/singup/singup.component.html
+++ b/src/app/modules/login/singup/singup.component.html
@@ -9,10 +9,10 @@
         <input matInput type="password" placeholder="Password" name="password" required formControlName="password">
       </mat-form-field>
       <!-- <mat-form-field appearance="fill">
-        <mat-label name="documentTypeName" required>Document Type</mat-label>
+        <mat-label name="documentTypeName" required formControlName="documentTypeName">Document Type</mat-label>
         <mat-select>
-          <mat-option value="one">CI</mat-option>
-          <mat-option value="two">Pasaporte</mat-option>
+          <mat-option value="Cedula">Cedula</mat-option>
+          <mat-option value="Pasaporte">Pasaporte</mat-option>
         </mat-select>
       </mat-form-field> -->
       <mat-form-field>
