--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -6,6 +6,10 @@
   <div *ngIf="!loading">
     <mat-toolbar style="background-color: rgb(100, 149, 237, .4); ">
       <h1>New Customer</h1>
+      <span class="spacer"></span>
+
+       <button class="signin-button" mat-raised-button color="warn" style="margin: 20px auto; " (click)="registerWithGoogle()"> Register with Google </button>
+
     </mat-toolbar>
 
     <mat-card style="margin-top: 20px; background-color: rgb(95, 158, 160, .4) ;">
@@ -83,8 +87,8 @@
 
 
           <mat-grid-tile [colspan]="2" [rowspan]="1">
-            <button class="signup-button" mat-raised-button routerLink="/"
-              style="margin-right: 20px;">Cancel</button>
+            <!-- <button class="signup-button" mat-raised-button routerLink="/"
+              style="margin-right: 20px;">Cancel</button> -->
             <button class="signup-button" type="submit" [disabled]="signupForm.invalid" mat-raised-button
               color="warn">Register</button>
           </mat-grid-tile>
