Signup with google data works

--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -8,7 +8,7 @@
       <h1>New Customer</h1>
       <span class="spacer"></span>
 
-       <button class="signin-button" mat-raised-button color="warn" style="margin: 20px auto; " (click)="registerWithGoogle()"> Register with Google </button>
+       <button class="signin-button" mat-raised-button color="warn" style="margin: 20px auto; " (click)="registerWithGoogle()"> Get data from Google Account </button>
 
     </mat-toolbar>
 
