--- a/src/app/UserProfile/account/create-account-type/createaccounttype.component.html
+++ b/src/app/UserProfile/account/create-account-type/createaccounttype.component.html
@@ -1,19 +1,19 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-      <form>
-        <div class="form-group">
+      <form [formGroup]="this.AccountComponent.myForm" >
+        <div class="form-group" >
           <label for="accountType">Tipo de Cuenta</label>
-          <select (change)="updateAccountType($event)" class="form-control" formControlName="documentType" id="accountType">
+          <select   (change)="updateAccountType($event)" class="form-control" formControlName="documentType"  id="accountType">
             <option>Cuenta Pesos </option>
             <option>Cuenta Dolares</option>
           </select>
+          <div *ngIf="this.AccountComponent.myForm?.get('accountType')?.invalid && (this.AccountComponent.myForm?.get('accountType')?.dirty || this.AccountComponent.myForm?.get('accountType')?.touched)">
+            <small class="text-danger">Debe seleccionar un tipo de cuenta</small>
+          </div>
         </div>
-        <div class="form-group">
-          <label     for="name">Nombre para su cuenta :</label>
-          <input  (input)="updateName($event)" type="text" class="form-control" id="name" name="name">
+        <div class="form-group">   
         </div>
-        <button (click)="this.AccountService.createAccount()" class="btn btn-primary">Validar</button>
       </form>
     </div>
   </div>
