metodo del perfil del usuario logeado

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,21 @@
+<div class="d-flex flex-column align-items-center">
+    <img alt="fotoperfil" [src]="customer?.avatarUrl || 'https://i.pinimg.com/474x/bd/f4/d3/bdf4d3fe1f9a17136319df951fe9b3e0.jpg'" class="rounded-circle w-10 h-10 mt-3">
+  
+    <h2 class="text-xl font-weight-bold">Nombre completo:  <ng-container *ngIf="customer">{{ customer.fullName }}</ng-container></h2>
+    <h2 class="text-xl font-weight-bold">Documento: <ng-container *ngIf="customer">{{ customer.document }}</ng-container></h2>
+    <h2 class="text-xl font-weight-bold">Documento ID: <ng-container *ngIf="customer">{{ customer.documentType.id }}</ng-container></h2>
+    <h2 class="text-xl font-weight-bold">Correo: <ng-container *ngIf="customer">{{ customer.email }}</ng-container></h2>
+    <h2 class="text-xl font-weight-bold">Telefono: <ng-container *ngIf="customer">{{ customer.phone }}</ng-container></h2>
+    <br>
+    <button class="btn btn-primary" (click)="Edit()">Editar datos</button>
+    <br>
+    <button [routerLink]="['/account']"class="btn btn-primary mb-2">Confirmar</button>
+    <br>
+    <button   (click)="deleteCustmer()"   class="btn btn-danger">Borrar cuenta</button>
+  </div>
+
+
+
 <div class="container">
     <nav>
             <ul class="mcd-menu">
